# LearnOpenGL-SDL2

./: CMakeLists.txt  README.md
include/: mesh.h  model.h  shader.h
include/glad/: glad.h
src/: CMakeLists.txt  glad.c
src/01-01.HelloWindow/: CMakeLists.txt  HelloWindow.cpp
src/01-02.HelloTriangle/: CMakeLists.txt  HelloTriangle.cpp
src/01-03.Shaders/: CMakeLists.txt  Shader.cpp
src/01-04.Texture/: CMakeLists.txt  Texture.cpp
src/01-04.Texture/shader/: shader.fs
src/01-05.Transform/: CMakeLists.txt  Transform.cpp
src/01-06.Coordinates/: CMakeLists.txt  Coordinates.cpp
src/01-06.Coordinates/shader/: shader.fs
src/01-07.Camera/: CMakeLists.txt  Camera.cpp  Camera_with_class.cpp
src/03-01.Mesh/: CMakeLists.txt  Mesh.cpp
src/04-06.Cubemaps/: CMakeLists.txt  cubemaps_skybox.cpp
